--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,7 @@ CMakeUserPresets.json
 
 build
 .DS_Store
+.vscode
 
 # CLion
 #  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
